@@ -11,6 +11,7 @@
   },
   "dependencies": [
     "base >= 2.0.7",
+    "? space-age",
     "fdsl >= 0.1.3",
     "? early-agriculture",
     "? cupric-asteroids >= 1.3.0",
